# OSRS-tools

./: .gitignore  .mise.toml  README.md  pyproject.toml
quest_scraper/: QuestOrder.md  QuestOrderForPures.md  custom_types.py  html_parser.py  main.py  markdown_parser.py  quest_lists.py  quest_requirements.py  utils.py  writers.py
